<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/img_money"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_illustration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_bgr_login"
        android:layout_width="match_parent"
        android:layout_height="350dp">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTradix"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/h1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextStyle5"/>
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/h1"
            app:layout_constraintLeft_toRightOf="@id/tvTradix"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/tvTradix"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/feature"
            style="@style/TextStyle2" />
        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/create_acc"
            style="@style/TextStyle4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        app:layout_constraintLeft_toRightOf="@id/v1"
        app:layout_constraintRight_toLeftOf="@id/v2"
        android:hint="@string/email"
        style="@style/edt_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintLeft_toRightOf="@id/v1"
        app:layout_constraintRight_toLeftOf="@id/v2"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/edt_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintLeft_toRightOf="@id/v1"
        app:layout_constraintRight_toLeftOf="@id/v2"
        android:text="@string/sign_up"
        style="@style/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_forgotpass"
        app:layout_constraintLeft_toRightOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        android:text="@string/forgot_password"
        style="@style/TextStyle6" />
    <TextView
        android:id="@+id/tv_login"
        app:layout_constraintRight_toLeftOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        android:text="@string/login"
        style="@style/TextStyle7"/>

</androidx.constraintlayout.widget.ConstraintLayout>