<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EmailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_bgr_resend_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tv_tradix"
            style="@style/TextStyle5"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/h1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_coin"
            app:layout_constraintLeft_toRightOf="@id/tv_tradix"
            app:layout_constraintTop_toBottomOf="@id/h1" />

        <TextView
            style="@style/TextStyle2"
            android:text="@string/feature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tradix" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:src="@drawable/ic_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title" />

    <TextView
        android:id="@+id/tv_information"
        style="@style/TextStyle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="We have sent you an\nemail to change your\npassword"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintRight_toRightOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/img_email" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_email"
        app:layout_constraintTop_toBottomOf="@id/tv_information"
        app:layout_constraintLeft_toRightOf="@id/v1"
        app:layout_constraintRight_toLeftOf="@id/v2"
        android:text="@string/resend_email"
        style="@style/btn_send_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_wait"
        style="@style/TextStyle8"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/wait"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintRight_toRightOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/btn_send_email" />
</androidx.constraintlayout.widget.ConstraintLayout>